--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -133,10 +131,7 @@
                                 <!-- Product price-->
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -157,9 +152,7 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -185,9 +178,7 @@
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -208,10 +199,8 @@
 
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
 
-                        </div>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -228,10 +217,8 @@
 
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
 
-                        </div>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -259,10 +246,7 @@
 
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
                 <div class="limpaDark col mb-5">
@@ -286,10 +270,7 @@
 
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent">
-
-                        </div>
+                        <button type="button" class="botao-adicionar-carrinho card-footer p-4 pt-0 border-top-0 bg-transparent"></button>
                     </div>
                 </div>
             </div>
@@ -301,9 +282,7 @@
             <p class="m-0 text-center text-white">Copyright &copy; Loja Virtual 2023</p>
         </div>
     </footer>
-
-    <script src="js/script.js"></script>
-    <!--Botstrap-->
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -313,10 +292,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-
-    <!-- Core theme JS-->
-
+        
+    <script src="js/script.js"></script>
+    <script src="js/produtos.js"></script>
 </body>
 
 </html>
